# visual-mock-zendesk-api

src/test/: pyproject.toml  run_test.py  test_1_users_create_many.py  test_2_users_search.py  test_3_users_show_many.py  test_4_tickets_create_many.py  test_5_tickets_show_many.py  test_6_tickets_show_comments.py  test_7_tickets_update_many.py  test_8_search.py  test_helpers.py  test_recorded.py
