

[project]
name = "visual-mock-zendesk-api-tests"
version = "0.9"
authors = [
  { name="Ben Fisher", email="shinerainseven@gmail.com" },
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
description = "Help test the Zendesk Tickets API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "shinerainsevenlib",
  "requests",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "ruff",
    "pytest",
]


[project.urls]
Homepage = "https://github.com/moltenform/visual-mock-zendesk-api"
Issues = "https://github.com/moltenform/visual-mock-zendesk-api/issues"


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]

[tool.pylint.'MESSAGES CONTROL']

[tool.shinerainsevenlib]
config_collection_legacy = 1
pylint_import_suggested_other_settings = 1
rufflint_import_suggested_other_settings = 1
hide_init_py_while_linting = 1

rufflint_ignore = [
    "S101", # we have asserts instead of assertTrue
    "PLW0603", # update global
    "F541", # unneeded fstrings ok
    "SIM905", # 'a|b|c'.split('|') is ok
    "S113", # no timeout
]

pylint_ignore = [
    "W1309", # f-string that does not use any interpolation variables, 
    "W3101", # method needs a 'timeout' parameter 
    "R0801", # duplicate code detected
]

pylint_specific_ignore_containing = [
]

rufflint_specific_ignore_containing = [
]

format_skip_if_path_contains = [
    '/OUTSIDE/'
]


[tool.yapf]

# styles: google, pep8, yapf, facebook
based_on_style = "facebook"
spaces_before_comment = 1
split_before_logical_operator = false
column_limit = 120
indent_width = 4

